--- a/css/style.css
+++ b/css/style.css
@@ -151,12 +151,12 @@
     gap: 2rem;
   }
 
-  .contact span{
+  .details .contact span{
     font-weight: 500;
   }
 
-  .contact a{
-      color: #000000;
+  .details .contact a{
+      color: var(--clr-dark);
       text-decoration: none;
   }
 
