--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    align-items: center;
+    align-items: left;
   }
 
   .contact{
