--- a/css/style.css
+++ b/css/style.css
@@ -140,12 +140,12 @@
     width: 50%;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 1.5rem;
   }
 
   .contact{
     display: flex;
-    align-items: left;
     gap: 2rem;
   }
 
