--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@
   .contact{
     display: flex;
     gap: 2rem;
+    position: relative;
   }
 
   .details .contact span{
@@ -154,6 +155,8 @@
   }
 
   .details .contact a, .details .contact p{
+      position: absolue;
+      left: 30%;
       color: var(--clr-dark);
       text-decoration: none;
       font-size: 16px;
