--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@
   }
 
   .details .contact a, .details .contact p{
-      position: absolue;
+      position: absolute;
       left: 30%;
       color: var(--clr-dark);
       text-decoration: none;
