--- a/css/style.css
+++ b/css/style.css
@@ -152,12 +152,12 @@
   }
 
   .details .contact span{
-    font-weight: 900;
+    color: #000000;
   }
 
   .details .contact a, .details .contact p{
       position: absolute;
-      left: 25%;
+      left: 30%;
       bottom: 0;
       color: var(--clr-dark);
       text-decoration: none;
